tests/ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - host: lalala.teste
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
        path: /
