tests/netpol-bot.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    estaleiro.io/netpolByWho: "33730877836"
    estaleiro.io/netpolClass: integration
    estaleiro.io/netpolTicket: x
    estaleiro.io/netpolType: egress
  name: egress-git-marvin
  namespace: esmailer-p
spec:
  egress:
  - ports:
    - port: 443
      protocol: TCP
    to:
    - ipBlock:
        cidr: 10.30.92.132/32
    - ipBlock:
        cidr: 10.31.22.120/32
  podSelector: {}
  policyTypes:
  - Egress
